@@ -12,7 +12,6 @@ ENV JDK_ARJ_FILE="openjdk-${JDK_VERSION}.tar.gz"
 ENV OPT="/opt"
 ENV JKD_DIR_NAME="jdk-${JDK_VERSION}"
 ENV JAVA_HOME="${OPT}/${JKD_DIR_NAME}"
-ENV JAVA_MINIMAL="${OPT}/java-minimal"
 
 # downlodad JDK to the local file
 ADD "$JDK_URL" "$JDK_ARJ_FILE"
@@ -38,29 +37,6 @@ RUN { \
         jlink --version ; \
     }
 
-# build modules distribution
-RUN jlink \
-    --verbose \
-    --add-modules \
-        java.base,java.sql,java.naming,java.desktop,java.management,java.security.jgss,java.instrument \
-        # java.naming - javax/naming/NamingException
-        # java.desktop - java/beans/PropertyEditorSupport
-        # java.management - javax/management/MBeanServer
-        # java.security.jgss - org/ietf/jgss/GSSException
-        # java.instrument - java/lang/instrument/IllegalClassFormatException
-    --compress 2 \
-    --strip-debug \
-    --no-header-files \
-    --no-man-pages \
-    --output "$JAVA_MINIMAL"
-
-# Second stage, add only our minimal "JRE" distr and our app
-FROM debian:stretch-slim
-
-ENV JAVA_HOME=/opt/java-minimal
-ENV PATH="$PATH:$JAVA_HOME/bin"
-
-# 
 FROM ubuntu:18.04
 
 ENV MAVEN_VERSION 3.5.0
